subprojects/pclc/test/errors/ill_formed.pcl
// RUN: not pclc %s | tee %t.stdout

print a = 5;
b = ?;

// Check comments and error message location
while (c = 1) {
  print a;
  print c;
  print d;
  $$;
}

print c;

// Mismatched parenthesis
if (() {hello;}
